sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:15: error: ')' expected but '}' found.
  }while(incr!=0)
  ^